// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  aria-hidden={null}
  className="slide orion-fusion-theme"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <div
    className="slide-shadow"
  />
  <div>
    Slide Content
  </div>
</div>
`;

exports[`should render a default Slide 1`] = `
<div
  aria-hidden={null}
  className="slide"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <div
    className="slide-shadow"
  />
  <div>
    Slide Content
  </div>
</div>
`;

exports[`should render a hidden Slide 1`] = `
<div
  aria-hidden={true}
  className="slide"
  onClick={[Function]}
  onKeyUp={[Function]}
>
  <div
    className="slide-shadow"
  />
  <div>
    Slide Content
  </div>
</div>
`;
